Use AvmAssertFail instead of NanoAssertFail to implement NanoAssert (Bug 473188 r=gal+)